--- a/gc/index.html
+++ b/gc/index.html
@@ -434,7 +434,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/avatar_unknown_4.png" alt="alternative">
+                                        <img class="card-image" src="images/testimonials/niel.png" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">"All our games are made with love to spread hope of a better future."</div>
                                             <div class="testimonial-author">Nielisson Mendonça - Founder</div>
@@ -446,7 +446,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/avatar_unknown_2.png" alt="alternative">
+                                        <img class="card-image" src="images/testimonials/joel.jpg" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">"We couldn’t be more excited to see environmentalism & gaming coming together in this exciting and interesting way."</div>
                                             <div class="testimonial-author">Joël Boele - Environmental Geographer</div>
@@ -458,7 +458,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/avatar_unknown_3.png" alt="alternative">
+                                        <img class="card-image" src="images/testimonials/camila.jpg" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">I like a lot this project, because it can help the world while you are having fun with a game. Good luck!</div>
                                             <div class="testimonial-author">Camila Suarez - Gamer</div>
