--- a/gc/index.html
+++ b/gc/index.html
@@ -458,7 +458,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/testimonials/camila.jpg" alt="alternative">
+                                        <img class="card-image" src="images/avatar_unknown_3.png" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">I like a lot this project, because it can help the world while you are having fun with a game. Good luck!</div>
                                             <div class="testimonial-author">Camila Suarez - Gamer</div>
