--- a/gc/index.html
+++ b/gc/index.html
@@ -460,7 +460,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/avatar_unknown_3.png" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">I like a lot this project, because it can help the world while you are having fun with a game. Good luck!</div>
+                                            <div class="testimonial-text">"I like a lot this project, because it can help the world while you are having fun with a game. Good luck!"</div>
                                             <div class="testimonial-author">Camila Suarez - Gamer</div>
                                         </div>
                                     </div>
@@ -470,10 +470,10 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/avatar_unknown_4.png" alt="alternative">
+                                        <img class="card-image" src="images/testimonials/capu.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">To be announced soon.</div>
-                                            <div class="testimonial-author">Player's name - Player - Location</div>
+                                            <div class="testimonial-text">"I finally found a system that brings together my two passions in life: ecology and video games."</div>
+                                            <div class="testimonial-author">Capucine Nicolas - UX Designer</div>
                                         </div>
                                     </div>        
                                 </div> <!-- end of swiper-slide -->
