--- a/gc/index.html
+++ b/gc/index.html
@@ -641,7 +641,7 @@
                 
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Our Inspirations</h4>
+                        <h4>Inspirations</h4>
                         <ul class="list-unstyled li-space-lg">
                             <li>
                                 <a class="white" href="https://playing4theplanet.org/">Playing for the Planet</a>
@@ -650,7 +650,7 @@
                                <a class="white" href="http://www.gamesforchange.org/">Games for Change</a>
                             </li>
                             <li class="media">
-                                <a class="white" href="xxxxxhttps://gameimpact.fr/">More to come</a>
+                                <a class="white" href="http://www.molleindustria.org/">Molleindustria</a>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
