--- a/gc/index.html
+++ b/gc/index.html
@@ -482,10 +482,10 @@
                                <!-- Slide -->
                                <div class="swiper-slide">
                                 <div class="card">
-                                    <img class="card-image" src="images/avatar_unknown_1.png" alt="alternative">
+                                    <img class="card-image" src="images/testimonials/simon.jpg" alt="alternative">
                                     <div class="card-body">
-                                        <div class="testimonial-text">To be announced soon.</div>
-                                        <div class="testimonial-author">Player's name - Player - Location</div>
+                                        <div class="testimonial-text">"Playing video games, raising awareness on environmental issues, and helping NGOs...all in one app? A bold and full of hope project!"</div>
+                                        <div class="testimonial-author">Simon Lebey - Environnemental legalist</div>
                                     </div>
                                 </div>        
                             </div> <!-- end of swiper-slide -->
