--- a/gc/index.html
+++ b/gc/index.html
@@ -524,7 +524,7 @@
                     <div class="text-container">
                         <div class="section-title">IMPACT</div>
                         <h2>Thanks to our players for being part of the solution!</h2>
-                        <p>Our current campaign's goal is to plant 5000 trees in the Amazon rainforest until the end of October of 2021.</p>
+                        <p>Our current campaign's goal is to plant 1000 trees in the Amazon rainforest until the end of December of 2021.</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -532,7 +532,11 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Learn more about the NGO's project.</div>
+                                <div class="media-body">Learn more about the <a href="https://www.black-jaguar.org/pt-br/" target="_blank">Black Jaguar Foundation</a>.</div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Our last update (26/05/21):</div>
                             </li>
                         </ul>
 
