--- a/gc/index.html
+++ b/gc/index.html
@@ -532,7 +532,7 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Learn more about the <a href="https://www.black-jaguar.org/pt-br/" target="_blank">Black Jaguar Foundation</a>.</div>
+                                <div class="media-body">Learn more about the <a href="https://www.black-jaguar.org/" target="_blank">Black Jaguar Foundation</a>.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -565,7 +565,7 @@
     <div id="contact" class="form-2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-3">
                     <div class="text-container">
                         <div class="section-title">CONTACT</div>
                         <h2>Converse with us!</h2>
