--- a/gc/index.html
+++ b/gc/index.html
@@ -669,11 +669,11 @@
                                 <a class="white" href="https://www.black-jaguar.org/" target="_blank"><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></a>
                             </li>
                             <li>
-                                <a class="white" href="#your-link">staffmanager.com</a>
+                                <a class="white" href="https://www.black-jaguar.org/">Black Jaguar Foundation</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a class="white" href="#your-link">association.gov</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
