--- a/gc/index.html
+++ b/gc/index.html
@@ -490,6 +490,18 @@
                                 </div>        
                             </div> <!-- end of swiper-slide -->
                             <!-- end of slide -->
+
+                                <!-- Slide -->
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <img class="card-image" src="images/testimonials/simon.jpg" alt="alternative">
+                                        <div class="card-body">
+                                            <div class="testimonial-text">"Helping a cause has never been so much fun, thanks for the brilliant idea."</div>
+                                            <div class="testimonial-author">Cedric Mondamert - HMI Ergonomist</div>
+                                        </div>
+                                    </div>        
+                                </div> <!-- end of swiper-slide -->
+                                <!-- end of slide -->
                             
                             </div> <!-- end of swiper-wrapper -->
         
