--- a/gc/index.html
+++ b/gc/index.html
@@ -494,7 +494,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/testimonials/simon.jpg" alt="alternative">
+                                        <img class="card-image" src="images/testimonials/cedric.JPG" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">"Helping a cause has never been so much fun, thanks for the brilliant idea."</div>
                                             <div class="testimonial-author">Cedric Mondamert - HMI Ergonomist</div>
