--- a/gc/privacy-policy.html
+++ b/gc/privacy-policy.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Privacy Policy - Aria - Business HTML Landing Page Template</title>
+    <title>Privacy Policy - Games Converse</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
