--- a/gc/terms-conditions.html
+++ b/gc/terms-conditions.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Terms Conditions - Aria - Business HTML Landing Page Template</title>
+    <title>Terms Conditions - Games Converse</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
