--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
-								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
-								<p style="font-size: small;"><i>(soon released for mobile)<br>
-								The Tenth Creative Games Jam - 02/2019</i></p>
-								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
+								<a href="https://play.google.com/store/apps/details?id=com.Nielisson.SkyPuppy&hl=fr&gl=US" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
+								<h3><a href="https://play.google.com/store/apps/details?id=com.Nielisson.SkyPuppy&hl=fr&gl=US" target="_blank">SkyPuppy</a></h3>
+								<p style="font-size: small;"><i>Finally available on Play Store since 2021</i></p>
+								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. By pushing the furniture or putting out 
+									the fire, you can clear the path, so you can guide the dog right out the door! Be quick and have fun!</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 								<p>Team composition: 3 people</p>
 								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch</a>																															
-								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Play</a>
+								<a href="https://play.google.com/store/apps/details?id=com.Nielisson.SkyPuppy&hl=fr&gl=US" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
