--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 											<li><b>VFX:</b> Pixel FX Designer and Adobe Photoshop</li>
 											<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
 											<li><b>Web:</b> Github pages and Wordpress</li>
-											<li><b>3D Modeling:</b> 3Ds Max, ZBrush and Maya</li>
+											<li><b>3D Modeling:</b> Blender and ZBrush</li>
 
 
 										  </ul> 
