--- a/index.html
+++ b/index.html
@@ -64,9 +64,26 @@
 						<h2>Portfolio</h2>
 						<p>These are some of my featured projects. Some of them are personal or student projects, and many of them are from game jams.</p>
 					</header>
+
+
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style3">
+							<article class="box style2">
+								<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
+								<h3><a href="" target="_blank">3D Art Work</a></h3>
+								<p style="font-size: small;"></p>
+								<p></p>
+								<p>Team composition: 1 person</p>
+								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Check out</a>																																															
+								
+							</article>
+						</div>
+
+
+
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p style="font-size: small;"><i>Student project - 08/2020</i></p>
@@ -79,7 +96,7 @@
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style4">
+							<article class="box style2">
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback-gif.gif" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p style="font-size: small;"><i>Brackeys Jam 2020.2 - 08/2020</i></p>
