--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
-								<h3><a href="" target="_blank">3D Art Work</a></h3>
-								<p style="font-size: small;"></p>
-								<p></p>
-								<p>Team composition: 1 person</p>
-								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Check out</a>																																															
+								<h3><a href="https://www.behance.net/gallery/136831325/3D-Projects" target="_blank">3D Art Work</a></h3>
+								<p style="font-size: small;">Behance Portfolio</p>
+								<p>These are some of my best 3D work so far. I love creating 3D assets, and I am an enthusiast of VR.</p>
+								<a href="https://www.behance.net/gallery/136831325/3D-Projects" class="button small scrolly" target="_blank">Check out</a>																																															
 								
 							</article>
 						</div>
