--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
 									<h3><a href="https://www.behance.net/gallery/136831325/3D-Projects" target="_blank">3D Art Work</a></h3>
 									<p style="font-size: small;">Behance Portfolio</p>
-									<p>These are some of my best 3D work so far. I love creating 3D assets, and I am an enthusiast of VR.</p>
+									<p>These are some of my best 3D work so far. I love creating 3D art, and I am a VR enthusiast.</p>
 									<center><a href="https://www.behance.net/gallery/136831325/3D-Projects" class="button small scrolly" target="_blank" >Check out</a></center>																																														
 									
 								</article>
