--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 								<p>Team composition: 3 people</p>
 							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
-								<center><a href="documents/Presentation_chicken_Out.pdf" class="button small scrolly" target="_blank">Learn More</a>
+								<center><a href="documents/Presentation_chicken_Out.pdf" class="button small scrolly" target="_blank">Learn +</a>
 									<a href="https://nielisson.itch.io/chicken-out" class="button small scrolly" target="_blank">Play</a></center>																																																
 																																															
 							</article>
