--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="description" content="Game Designer and 2D/3D Artist">
 	</head>
 	<body class="is-preload">
 
