--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta name="description" content="Game Designer and 2D/3D Artist">
+		<meta itemprop="name" content="Nielisson Mendonça - Game Designer and 2D/3D Artist"
+		<meta name="description" content="I've worked on many serious games and some games for console. 
+		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
 	</head>
 	<body class="is-preload">
 
