--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta itemprop="name" content="Nielisson Mendonça - Game Designer and 2D/3D Artist">
 		<meta itemprop="image" content="images/Profile_Photo/avatarPic.png">
-		<meta name="description" content="I've worked on many serious games and some games for console. 
+		<meta name="description" content="I've worked on many serious games and games for console/PC. 
 		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
 	</head>
 	<body class="is-preload">
