--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
 								<h3><a href="https://www.behance.net/gallery/136831325/3D-Projects" target="_blank">3D Art Work</a></h3>
 								<p style="font-size: small;">Behance Portfolio</p>
-								<p>These are some of my best 3D work so far. I love creating 3D art, and I am a VR enthusiast.</p>
+								<p style="font-weight: bold">These are some of my best 3D work so far. I love creating 3D art, and I am a VR enthusiast.</p>
 								<center><a href="https://www.behance.net/gallery/136831325/3D-Projects" class="button small scrolly" target="_blank" >Check out</a></center>																																														
 								
 							</article>
@@ -91,7 +91,7 @@
 								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p style="font-size: small;"><i>Student project - 08/2020</i></p>
-								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
+								<p style="font-weight: bold">In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#57385c>Programming</font></b></p>
 								<p>Team composition: 1 person</p>
 								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch</a>																																															
