--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
 					</div>
 					<footer>
 						<div class="container" style="align-content: center; contain">
-							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN_2023.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>		
+							<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_EN_2023.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+							<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>		
 						</div>
 
 						<ul id="copyright">
