source control text update

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 											<li><b>Game engines:</b> Unity and Unreal Engine</li>
 											<li><b>Programming/markup languages:</b> C# (intermediate), HTML and CSS/JavaScript (basic)</li>
 											<li><b>Project management:</b> Trello, Jira and Notion</li>
-											<li><b>Source control:</b> GitHub, Fork and SourceTree</li>
+											<li><b>Source control:</b> GitHub and SourceTree</li>
 											<li><b>VFX:</b> Pixel FX Designer, Unity's Particle System and Adobe Photoshop</li>
 											<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
 											<li><b>Web:</b> Github pages and Wordpress</li>
