--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 
 
 									<div class="row">
-
 										<div class="col-4 col-6-medium col-12-small">
 											<article class="box style2">
 												<a href="" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
@@ -88,9 +87,22 @@
 
 										<div class="col-4 col-6-medium col-12-small">
 											<article class="box style2">
+												<a href="https://nielisson.itch.io/pendulum" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/1cc4f777304729.5c844a637ae27.gif" alt="" /></a>
+												<h3><a href="https://nielisson.itch.io/pendulum" target="_blank">Pendulum</a></h3>
+												<p style="font-size: small;"><i>Extra Credits Holiday 2018</i></p>
+												<p>Pendulum is a steampunk-inspired 2D platformer. Our hero is striving to survive in this mysterious and hostile place that is full of traps, puzzles and enemies.</p>
+												<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+												<p>Team composition: 3 people</p>
+												<a href="https://youtu.be/WQEPTHOcTSo" class="button small scrolly" target="_blank">Watch</a>
+												<a href="https://nielisson.itch.io/pendulum" class="button small scrolly" target="_blank">Play</a>
+											</article>
+										</div>
+
+										<div class="col-4 col-6-medium col-12-small">
+											<article class="box style2">
 												<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 												<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
-												<p style="font-size: small;"><i>Student project - 08/2020</i></p>
+												<p style="font-size: small;"><i>Personal project - 08/2020</i></p>
 												<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 												<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#57385c>Programming</font></b></p>
 												<p>Team composition: 1 person</p>
