--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
 										<div class="col-4 col-6-medium col-12-small">
 											<article class="box style2">
-												<a href="https://nielisson.itch.io/pendulum" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/1cc4f777304729.5c844a637ae27.gif" alt="" /></a>
-												<h3><a href="https://nielisson.itch.io/pendulum" target="_blank">Pendulum</a></h3>
-												<p style="font-size: small;"><i>Extra Credits Holiday 2018</i></p>
-												<p>Pendulum is a steampunk-inspired 2D platformer. Our hero is striving to survive in this mysterious and hostile place that is full of traps, puzzles and enemies.</p>
-												<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-												<p>Team composition: 3 people</p>
+												<a href="https://nielisson.itch.io/big-little-feud" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/littlebigfeud.png" alt="" /></a>
+												<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">Little Big Feud</a></h3>
+												<p style="font-size: small;"><i>Game Offf 2023<</i></p>
+												<p>Fight back for your village as a small elf in a big world!</p>
+												<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Art</font></b></p>
+												<p>Team composition: 4 people</p>
 												<a href="https://youtu.be/WQEPTHOcTSo" class="button small scrolly" target="_blank">Watch</a>
-												<a href="https://nielisson.itch.io/pendulum" class="button small scrolly" target="_blank">Play</a>
+												<a href="https://nielisson.itch.io/big-little-feud" class="button small scrolly" target="_blank">Play</a>
 											</article>
 										</div>
 
