--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 											<article class="box style2">
 												<a href="https://nielisson.itch.io/big-little-feud" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/littlebigfeud.png" alt="" /></a>
 												<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">Little Big Feud</a></h3>
-												<p style="font-size: small;"><i>Game Offf 2023<</i></p>
+												<p style="font-size: small;"><i>Game Offf 2023</i></p>
 												<p>Fight back for your village as a small elf in a big world!</p>
-												<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Art</font></b></p>
+												<p>Roles: <b><font color=#1a4f63>UI/UX and Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 												<p>Team composition: 4 people</p>
 												<a href="https://youtu.be/WQEPTHOcTSo" class="button small scrolly" target="_blank">Watch</a>
 												<a href="https://nielisson.itch.io/big-little-feud" class="button small scrolly" target="_blank">Play</a>
@@ -707,51 +707,51 @@
 						</div>
 					<footer>
 						<div class="container" style="align-content: center; contain">
-							<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_EN_2023.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-							<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>		
+							<a href="https://nielisson.com/documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+							<!--<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>-->
 						</div>
 
-						<ul id="copyright">
-							<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
-							
-						</ul>
-					</footer>
-				</div>
-			</article>
+							<ul id="copyright">
+								<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
 
-<!-- Botao Scroll UP -->
+							</ul>
+						</footer>
+					</div>
+				</article>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
-	
-	<script>
-		//Get the button
-		var mybutton = document.getElementById("myBtn");
-		
-		// When the user scrolls down 20px from the top of the document, show the button
-		window.onscroll = function() {scrollFunction()};
-		
-		function scrollFunction() {
-		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-			mybutton.style.display = "block";
-		  } else {
-			mybutton.style.display = "none";
-		  }
-		}
-		
-		// When the user clicks on the button, scroll to the top of the document
-		function topFunction() {
-		  document.body.scrollTop = 0;
-		  document.documentElement.scrollTop = 0;
-		}
-		</script>
+	<!-- Botao Scroll UP -->
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+							<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
 
-	</body>
+							<script>
+								//Get the button
+								var mybutton = document.getElementById("myBtn");
+
+								// When the user scrolls down 20px from the top of the document, show the button
+								window.onscroll = function () { scrollFunction() };
+
+								function scrollFunction() {
+									if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+										mybutton.style.display = "block";
+									} else {
+										mybutton.style.display = "none";
+									}
+								}
+
+								// When the user clicks on the button, scroll to the top of the document
+								function topFunction() {
+									document.body.scrollTop = 0;
+									document.documentElement.scrollTop = 0;
+								}
+							</script>
+
+							<!-- Scripts -->
+							<script src="assets/js/jquery.min.js"></script>
+							<script src="assets/js/jquery.scrolly.min.js"></script>
+							<script src="assets/js/browser.min.js"></script>
+							<script src="assets/js/breakpoints.min.js"></script>
+							<script src="assets/js/util.js"></script>
+							<script src="assets/js/main.js"></script>
+
+</body>
 </html>
