--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 												<p>Fight back for your village as a small elf in a big world!</p>
 												<p>Roles: <b><font color=#1a4f63>UI/UX and Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 												<p>Team composition: 4 people</p>
-												<a href="https://youtu.be/WQEPTHOcTSo" class="button small scrolly" target="_blank">Watch</a>
+												<a href="https://youtu.be/4nj2BWVc-8s" class="button small scrolly" target="_blank">Watch</a>
 												<a href="https://nielisson.itch.io/big-little-feud" class="button small scrolly" target="_blank">Play</a>
 											</article>
 										</div>
