--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 						</div>
 					<footer>
 						<div class="container" style="align-content: center; contain">
-							<a href="https://nielisson.github.io/documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+							<a href="https://nielisson.github.io/documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf/" class="button large scrolly" target="_blank">Download my resume</a>
 							<!--<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>-->
 						</div>
 
