--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta itemprop="name" content="Nielisson Mendonça - Game Designer and 2D/3D Artist">
-		<meta property="og:image" content="https://nielisson.com/images/Profile_Photo/avatarPic.png"/>
+		<meta property="og:image" content="https://nielisson.github.io/images/Profile_Photo/avatarPic.png"/>
 		<meta name="description" content="I've worked on many serious games and games for console/PC. 
 		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
 	</head>
@@ -41,7 +41,7 @@
 								<h1><strong>Nielisson Mendonça</strong></h1>
 							</header>
 							<p>Game Designer and 3D/2D Artist</p>
-							<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024" class="button large scrolly" target="_blank">Download my resume</a>
+							<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 							<!-- <a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a> -->
 
 						</div>
@@ -244,7 +244,7 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<article class="box style2">
 												<a href="https://nielisson.itch.io/note-to-self" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0e46fc77304729.5c840c0c0fd66.gif" alt="" /></a>
-												<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self:</a></h3>
+												<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self</a></h3>
 												<p style="font-size: small;"><i>Brackeys Game Jam - 02/2019</i></p>
 												<p>
 													During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings.
@@ -281,21 +281,6 @@
 												<p>Team composition: 9 people</p>
 												<a href="https://youtu.be/Pf1hFFAivgs" class="button small scrolly" target="_blank">Watch</a>
 												<a href="https://globalgamejam.org/2019/games/host-shell-0" class="button small scrolly" target="_blank">Play</a>
-											</article>
-										</div>
-
-										<div class="col-4 col-6-medium col-12-small">
-											<article class="box style2">
-												<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/wingsuit2.png" alt="" /></a>
-												<h3><a href="https://youtu.be/dOkUWqhKDHM?t=46" target="_blank">Wingsuit Kings</a></h3>
-												<p style="font-size: small;"><i>Freelance work 2019</i></p>
-												<p>I've created most of the screens for Wingsuit Kings, including the logo. It's important to highlight that they have tweaked a few elements after my work was done.</p>
-												<p>Role: <b><font color=#1a4f63>UI Art</font></b></p>
-												<p>Team composition: 4 people</p>
-												<center>
-													<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="button small scrolly" target="_blank">Watch</a>
-													<a href="https://play.google.com/store/apps/details?id=com.Unsalted.WingsuitFree&hl=en_US&gl=US" class="button small scrolly" target="_blank">Mockups</a>
-												</center>
 											</article>
 										</div>
 
@@ -707,7 +692,7 @@
 						</div>
 					<footer>
 						<div class="container" style="align-content: center; contain">
-							<a href="https://nielisson.github.io/documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf/" class="button large scrolly" target="_blank">Download my resume</a>
+							<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 							<!--<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>-->
 						</div>
 
