--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
 
 										<div class="col-4 col-6-medium col-12-small">
 											<article class="box style2">
+												<a href="https://nielisson.itch.io/abuelas-space-bistro" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a>
+												<h3><a href="https://nielisson.itch.io/abuelas-space-bistro" target="_blank">Abuela's Space Bistro'</a></h3>
+												<p style="font-size: small;"><i>Game Offf 2023</i></p>
+												<p>Fight back for your village as a small elf in a big world!</p>
+												<p>Roles: <b><font color=#1a4f63>UI/UX and Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+												<p>Team composition: 4 people</p>
+												<a href="https://youtu.be/4nj2BWVc-8s" class="button small scrolly" target="_blank">Watch</a>
+												<a href="https://nielisson.itch.io/big-little-feud" class="button small scrolly" target="_blank">Play</a>
+											</article>
+										</div>
+
+										
+
+										<div class="col-4 col-6-medium col-12-small">
+											<article class="box style2">
 												<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 												<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 												<p style="font-size: small;"><i>Personal project - 08/2020</i></p>
