--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 
 										<div class="col-4 col-6-medium col-12-small">
 											<article class="box style2">
-												<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
-												<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3>
+												<a href="https://store.steampowered.com/app/606880/GreedFall/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
+												<h3><a href="https://store.steampowered.com/app/606880/GreedFall/" target="_blank">Greedfall</a></h3>
 												<p style="font-size: small;"><i>(PC, XBOX One and PS4)</i></p>
 												<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
 												<p>Role: <b><font color=#a85265>GUI artist and Integrator (internship)</font> </b></p>
 												<p>Team composition: 192 people</p>
 												<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch</a>
-												<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Play</a>
+												<a href="https://store.steampowered.com/app/606880/GreedFall/" class="button small scrolly" target="_blank">Play</a>
 											</article>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
