--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta itemprop="name" content="Nielisson Mendonça - Game Designer and 2D/3D Artist">
-		<meta property="og:image" content="https://nielisson.github.io/images/Profile_Photo/avatarPic.png"/>
+		<meta property="og:image" content="https://nielisson.github.io/images/Profile_Photo/avatarPic.jpg"/>
 		<meta name="description" content="I've worked on many serious games and games for console/PC. 
 		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
 	</head>
