--- a/index.html
+++ b/index.html
@@ -653,32 +653,7 @@
 
 						<button type="submit">Send</button>
 				</form>
-				<!--
-								<div class="row">
-									<div class="col-12">
-										<form method="post" action="#">
-											<div class="row">
-												<div class="col-6 col-12-small">
-													<input type="text" name="name" id="name" placeholder="Name" />
-												</div>
-												<div class="col-6 col-12-small">
-													<input type="text" name="email" id="email" placeholder="Email" />
-												</div>
-												<div class="col-12">
-													<input type="text" name="subject" id="subject" placeholder="Subject" />
-												</div>
-												<div class="col-12">
-													<textarea name="message" id="message" placeholder="Message"></textarea>
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><input type="submit" value="Send Message" /></li>
-														<li><input type="reset" value="Clear Form" class="alt" /></li>
-													</ul>
-												</div>
-											</div>
-										</form>
-			-->
+
 			</div>
 			<div class="col-12">
 				<hr />
@@ -726,34 +701,34 @@
 			</div>
 		</article>
 
-		<!-- Botao Scroll UP
+		<!-- Botao Scroll UP <End of the script for the button -->
 
-							<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
+		<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
 
-							<script>
-								//Get the button
-								var mybutton = document.getElementById("myBtn");
+		<script>
+			//Get the button
+			var mybutton = document.getElementById("myBtn");
 
-								// When the user scrolls down 20px from the top of the document, show the button
-								window.onscroll = function () { scrollFunction() };
+			// When the user scrolls down 20px from the top of the document, show the button
+			window.onscroll = function () { scrollFunction() };
 
-								function scrollFunction() {
-									if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-										mybutton.style.display = "block";
-									} else {
-										mybutton.style.display = "none";
-									}
-								}
+			function scrollFunction() {
+				if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+					mybutton.style.display = "block";
+				} else {
+					mybutton.style.display = "none";
+				}
+			}
 
-								// When the user clicks on the button, scroll to the top of the document
-								function topFunction() {
-									document.body.scrollTop = 0;
-									document.documentElement.scrollTop = 0;
-								}
-							</script>
+			// When the user clicks on the button, scroll to the top of the document
+			function topFunction() {
+				document.body.scrollTop = 0;
+				document.documentElement.scrollTop = 0;
+			}
+		</script>
 
-		<End of the script for the button -->
-		
+
+
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
