--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 				</p>
 
 			</div>
-
-			</div>
 		</article>
 
 
@@ -648,10 +646,10 @@
 							<textarea name="message" placeholder="Write your message here"></textarea>
 						</p>
 					</label>
-					<label>
-						<br>
 
-						<button type="submit">Send</button>
+					<br>
+
+					<button type="submit">Send</button>
 				</form>
 
 			</div>
@@ -685,11 +683,10 @@
 				</ul>
 				<hr />
 			</div>
-			</div>
+
 			<footer>
 				<div class="container" style="align-content: center; contain">
 					<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-					<!--<a href="https://nielisson.com/documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>-->
 				</div>
 
 				<ul id="copyright">
@@ -698,36 +695,36 @@
 
 				</ul>
 			</footer>
-			</div>
+
 		</article>
 
-		<!-- Botao Scroll UP <End of the script for the button -->
+		<!-- Botao Scroll UP
 
-		<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
+						<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
 
-		<script>
-			//Get the button
-			var mybutton = document.getElementById("myBtn");
+						<script>
+							//Get the button
+							var mybutton = document.getElementById("myBtn");
 
-			// When the user scrolls down 20px from the top of the document, show the button
-			window.onscroll = function () { scrollFunction() };
+							// When the user scrolls down 20px from the top of the document, show the button
+							window.onscroll = function () { scrollFunction() };
 
-			function scrollFunction() {
-				if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-					mybutton.style.display = "block";
-				} else {
-					mybutton.style.display = "none";
-				}
-			}
+							function scrollFunction() {
+								if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+									mybutton.style.display = "block";
+								} else {
+									mybutton.style.display = "none";
+								}
+							}
 
-			// When the user clicks on the button, scroll to the top of the document
-			function topFunction() {
-				document.body.scrollTop = 0;
-				document.documentElement.scrollTop = 0;
-			}
-		</script>
+							// When the user clicks on the button, scroll to the top of the document
+							function topFunction() {
+								document.body.scrollTop = 0;
+								document.documentElement.scrollTop = 0;
+							}
+						</script>
 
-
+		<End of the script for the button -->
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
