--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://www.behance.net/gallery/136831325/3D-Projects" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
+							<a href="https://www.behance.net/gallery/136831325/3D-Projects" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/astronaut.png" alt="Astronaut" /></a>
 							<h3><a href="https://www.behance.net/gallery/136831325/3D-Projects" target="_blank">3D Art Work</a></h3>
 							<p style="font-size: small;">Behance Portfolio</p>
 							<p>These are some of my best 3D work so far. I love creating 3D art, and I am a VR enthusiast.</p>
