--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
 							<a href="https://nielisson.itch.io/big-little-feud" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/littlebigfeud.png" alt="" /></a>
+							<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">My Lovely Planet</a></h3>
+							<p style="font-size: small;"><i>2023</i></p>
+							<p>A mobile game where your actions in game have an impact in real life!</p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX and Game Design</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Team composition: ~12 people</p>
+							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
+							<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
+						</article>
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://nielisson.itch.io/big-little-feud" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/littlebigfeud.png" alt="" /></a>
 							<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">Little Big Feud</a></h3>
 							<p style="font-size: small;"><i>Game Offf 2023</i></p>
 							<p>Fight back for your village as a small elf in a big world!</p>
