--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://nielisson.itch.io/big-little-feud" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/littlebigfeud.png" alt="" /></a>
-							<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">My Lovely Planet</a></h3>
+							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
+							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>2023</i></p>
 							<p>A mobile game where your actions in game have an impact in real life!</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and Game Design</font> | <font color=#f06f4f>Game Design</font></b></p>
