--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
 							<p style="font-size: small;"><i>2023</i></p>
 							<p>A mobile game where your actions in game have an impact in real life!</p>
-							<p>Roles: <b><font color=#1a4f63>UI/UX and Game Design</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX and 2D art</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: ~12 people</p>
 							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
