--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 						<article class="box style2">
 							<a href="https://www.mylovelyplanet.org/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/mlp.png" alt="" /></a>
 							<h3><a href="https://www.mylovelyplanet.org/" target="_blank">My Lovely Planet</a></h3>
-							<p style="font-size: small;"><i>2023</i></p>
-							<p>A mobile game where your actions in game have an impact in real life!</p>
+							<p style="font-size: small;"><i>2023 (one year)</i></p>
+							<p>A F2P mobile game where your actions in game have an impact in real life!</p>
 							<p>Roles: <b><font color=#1a4f63>UI/UX and 2D art</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: ~12 people</p>
 							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
@@ -171,7 +171,7 @@
 						<article class="box style2">
 							<a href="https://play.google.com/store/apps/details?id=com.Nielisson.SkyPuppy&hl=fr&gl=US" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
 							<h3><a href="https://play.google.com/store/apps/details?id=com.Nielisson.SkyPuppy&hl=fr&gl=US" target="_blank">SkyPuppy</a></h3>
-							<p style="font-size: small;"><i>Finally available on Play Store since 2021</i></p>
+							<p style="font-size: small;"><i>Available on Google Play Store (my first release)</i></p>
 							<p>
 								In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. By pushing the furniture or putting out
 								the fire, you can clear the path, so you can guide the dog right out the door! Be quick and have fun!
