--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</header>
 						<p>Game Designer and 3D/2D Artist</p>
 						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-						<!-- <a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR_2023.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a> -->
+						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a> 
 
 					</div>
 				</div>
