--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="container">
 				<header>
 					<h2>Portfolio</h2>
-					<p>These are some of my featured projects. Some of them are personal or student projects, and many of them are from game jams.</p>
+					<p>These are some of my featured projects. They are professional or personal projects, and many of them are from game jams.</p>
 				</header>
 
 
@@ -120,7 +120,7 @@
 							<p>Roles: <b><font color=#1a4f63>UI/UX and Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: 4 people</p>
 							<a href="https://youtu.be/4nj2BWVc-8s" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://nielisson.itch.io/big-little-feud" class="button small scrolly" target="_blank">Play</a>
+							<a href="https://www.youtube.com/watch?v=SzrOQtFhx7U" class="button small scrolly" target="_blank">Play</a>
 						</article>
 					</div>
 
