--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 							</p>
 							<ul>
 								<li>Featured <a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing" target="_blank">Game Design Documents</a></li>
-								<li>Article: <a href="https://www.gamasutra.com/blogs/NielissonMendonca/20190410/340456/Game_Jam_Survival_Kit.php" target="_blank">Game Jam Survival Kit</a></li>
+								<li>Article: <a href="https://www.gamedeveloper.com/audio/game-jam-survival-kit" target="_blank">Game Jam Survival Kit</a></li>
 								<li><a href="https://itch.io/jams/hosted-by-nielisson" target="_blank">Game Jams </a>I hosted</li>
 
 							</ul>
